--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,10 @@
         <item>in progress</item>
         <item>assign</item>
         <item>completed</item>
-
+    </string-array>
+    <string-array name="team_menu">
+        <item>Team A</item>
+        <item>Team B</item>
+        <item>Team C</item>
     </string-array>
 </resources>
